# server-integrations

./: README.md
azure-dps-iot-hub-auth/: README.md
azure-dps-iot-hub-auth/azure-enrollment-function/: HttpTrigger1.cs
azure-dps-iot-hub-auth/device-applications/: prov_dev_client_bbb_prebuilt
azure-dps-iot-hub-auth/device-applications/custom_hsm_example/: CMakeLists.txt
azure-dps-iot-hub-auth/device-applications/custom_hsm_example/inc/: x509_impl.h
azure-dps-iot-hub-auth/device-applications/custom_hsm_example/src/: custom_hsm_example.c  x509_impl.c
azure-dps-iot-hub-auth/device-applications/prov_dev_client_bbb/: CMakeLists.txt
azure-dps-iot-hub-auth/device-applications/prov_dev_client_bbb/src/: main.c
